fix overflow for cursors (#68)

--- a/frontend/CursorField.module.css
+++ b/frontend/CursorField.module.css
@@ -1,3 +1,13 @@
+.cursorField {
+  position: absolute;
+  pointer-events: none;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .cursor {
   position: absolute;
   pointer-events: none;
